# CAP

P1/: P1.ipynb  (+5 more)
P2/: .gitignore  CMakeLists.txt  Makefile  README.md  check_outputs.sh  cmake_install.cmake  contrast-enhancement.cpp  contrast-mpi  contrast-mpi-openmp  contrast-mpi-v1  contrast-mpi.cpp  contrast-times  hist-equ.h  histogram-equalization.cpp  once.sh  run_v1.sh  run_vX.sh
P2/testing_ideas/: scatter  scatter.cpp
P2/versions/MPI+OpenMP/original/: contrast-enhancement.cpp  contrast-mpi-openmp.cpp  results_original.csv
P2/versions/MPI+OpenMP/v2.1/: contrast-enhancement.cpp  contrast-mpi-openmp.cpp  contrast-mpi.cpp  hist-equ.h  histogram-equalization.cpp  utils.cpp  v2.1_description.txt
P2/versions/MPI+OpenMP/v2.1/results/: results_v2.1_1_1.csv  results_v2.1_1_2.csv  results_v2.1_1_3.csv  results_v2.1_1_4.csv  results_v2.1_2_5.csv  results_v2.1_2_6.csv  results_v2.1_2_7.csv  results_v2.1_2_8.csv  results_v2.1_4_13.csv  results_v2.1_4_14.csv  results_v2.1_4_15.csv  results_v2.1_4_16.csv  results_v2.1_6_21.csv  results_v2.1_6_22.csv  results_v2.1_6_23.csv  results_v2.1_6_24.csv
P2/versions/MPI+OpenMP/v2.1_local/results/: results_v2.1_local__1.csv  results_v2.1_local__2.csv  results_v2.1_local__3.csv  results_v2.1_local__4.csv  results_v2.1_local__5.csv  results_v2.1_local__6.csv  results_v2.1_local__7.csv  results_v2.1_local__8.csv
P2/versions/MPI/original/: contrast-mpi.cpp
P2/versions/MPI/original/results/: results_original.csv
P2/versions/MPI/v1/: contrast-mpi.cpp  v1_description.txt
P2/versions/MPI/v2/: contrast-mpi.cpp  v2_description.txt
(+116 files in other folders)
